# augur

./: .gitignore  BUILD.md  TESTERS.md  augur-prototype-1.html  augur-storage-options.md  augur-v0.2-dev-notes.md  augur-vault-format-spec.md  augur-vault-loader.html  augur-zip.js  build-frontend.mjs  package-lock.json  package.json  srd-bestiary.js  tauri-bridge.js  tutorial.augur  vault-adapter.js  vault-edit.js  vault-serialize.js  vault.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
