[package]
name = "augur"
version = "0.2.0"
description = "An NLE-style session planner for tabletop RPGs."
authors = ["Yellowberri"]
edition = "2021"
rust-version = "1.77"

# The desktop entry point compiles the library produced below.
[lib]
name = "augur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
